Closed Bug 619866 Opened 15 years ago Closed 15 years ago

Holding Shift should only trigger safe mode if other modifiers are not held (avoid conflicts with custom shortcuts)

Categories

(Toolkit :: Startup and Profile System, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b9
Tracking Status
blocking2.0 --- -

People

(Reporter: quatrixj, Assigned: robert.strong.bugs)

References

Details

(Keywords: regression)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8) Gecko/20100101 Firefox/4.0b8 Build Identifier: See Bug 602562. This interferes with some Windows functionality. I specify a hot key Ctrl+Shift+N in the Firefox shortcut properties and use that key to launch it. As of Beta 8, using that shortcut starts Firefox in safe mode. The Shift key is also used in Windows to launch a program minimized, so holding Shift and clicking a Firefox shortcut starts it in safe mode but minimized. Is there at least a way to disable this behavior? Reproducible: Always Steps to Reproduce: 1. Find Firefox shortcut in the Start Menu and open properties. 2. Change Shortcut Key to Ctrl+Shift+N. OK/Apply. 3. Press Ctrl+Shift+N. Actual Results: Firefox safe mode dialog pops up. Expected Results: Firefox opens normally.
This is exactly what I was afraid of! Why are we using shift instead of control, or something less likely to be accidental?
status2.0: --- → ?
Keywords: regression
I was afraid of using shift exactly for this same reason! as well but I don't think using ctrl would have prevented this - see bug 602562 as to why we are using shift. As for starting minimized using shift, I tried to reproduce on Win7 and Win2K and programs (e.g. IE, notepad, wordpad, Firefox prior to this change) did not start minimized when holding the shift key down so more details as to how to reproduce that specific issue would be helpful. We can likely fix the issue regarding ctrl + shift + <any other key> in the "Steps to Reproduce: but more info is required to figure out why I was unable to reproduce the start minimized. There is still plenty of time to fix the issue with shortcut keys but without the ability to reproduce the start minimized case I can't say whether this is a significant issue or whether there is a reasonable way to resolve it.
Apologies for bugspam, but just saw that that link was for the following (really old) versions of Windows: Microsoft Windows 3.0 Standard Edition Microsoft Windows 3.1 Standard Edition Microsoft Windows 3.11 Standard Edition So...
Yep, I've *read* that. ;) I've also tried that on a couple of systems... one of them being a MozQA Win2K system... and notepad, wordpad, IE, and Firefox B7 prior to this change did not start minimized.
So, if we can exclude the "start minimized" case it would be fairly simple to handle the shortcut key case. James, can you confirm that it starts minimized when holding the shift key down... I haven't been able to reproduce.
(In reply to comment #4) > Apologies for bugspam, but just saw that that link was for the following > (really old) versions of Windows: > Microsoft Windows 3.0 Standard Edition > Microsoft Windows 3.1 Standard Edition > Microsoft Windows 3.11 Standard Edition > > So... Just for my own sanity, where did you find this info since the page did not reference the versions?
I clicked "Applies to", and those versions popped up. Regarding Comment 0's steps to reproduce, step 3 can still launch Firefox in not-safe-mode if you let go of Shift immediately after pressing 'N'. Holding for more than a second launches in safe mode.
Thanks... clicking "expand all" doesn't expand all as in sub items. :/
Summary: "Hold Shift key for safe mode" conflicts with Windows functions → Shift key for safe mode conflicts with Windows shortcut keys
Attached patch patch rev1Splinter Review
I'm going to wait on a response from James to comment #2 / comment #5 before requesting review
Assignee: nobody → robert.bugzilla
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
The minimize behavior is inconsistent depending on the location of the shortcut (Start Menu programs, pinned, desktop, etc.), but it happens every time for me with a desktop shortcut. Try holding Shift while double-clicking on a desktop shortcut. I get the safe mode dialog minimized to the task bar.
Regarding the press/release timing, I'm pretty quick on a keyboard but still can't release Shift fast enough to avoid going into safe mode. I'm letting go easily < 0.5 s after pressing "N". Seems like it would vary widely by first/cold start vs. subsequent start and other variables.
Blocks: 602562
blocking2.0: --- → ?
status2.0: ? → ---
Thanks James, I am able to reproduce it starting minimized using shift with a desktop shortcut but it also starts minimized using ctrl with a desktop shortcut. Can you confirm that this happens when launching with ctrl as well for you?
Confirmed, either Shift or Ctrl in Windows 7, but neither in XP. However, I tried the same thing with a few other apps, and none of them started minimized in 7. It's only happening for me with Firefox and Thunderbird, suggesting that something Mozilla-specific is going on here. The KB article also applies only to Windows 3, further evidence that I was mistaken and it has nothing to do with Windows itself. Still something to look into if Mozilla is doing something weird.
Thanks again James, I think a separate bug on the minimized issue should be filed and that we should be able to move forward with just check if ctrl or alt is pressed during startup and if so not launch in safe mode. If you get a chance, could you confirm that the try build I linked to does the right thing for you?
>This interferes with some Windows functionality ... >I specify a hot key It sounds like this is interfering with the potential of a user specified hot key, as opposed to a built in windows feature. Even if this did directly conflict with an existing windows feature, I would still argue in favor of the behavior, since it streamlines support, and having two shortcuts is non-negotiable. I recommend wontfix.
Alex, the patch makes it so if the shift key is pressed without the ctrl or alt key being pressed we launch in safe mode. If the shift key is pressed and the ctrl and / or alt key is pressed it doesn't start in safe mode. This is the behavior we should have and I highly recommend not wontfixing this especially since there is a patch attached.
Yeah, that's fine. Sorry, thought we were heading towards the suggestion of getting rid of the feature entirely due to an obscure boundary case.
Attachment #498293 - Flags: review?(dtownsend)
Confirmed, test build resolves my problem. Thanks for the quick fix, Robert. As a programmer of business apps myself, I know it's tempting sometimes to call something a corner case and say the software "works as designed" even when it's a simple fix.
Fun, I remember the shift issue on Windows 3.x somewhat. The shift key was important then because the concept of the taskbar didn't exist till windows 95 to deal with both a desktop, a start menu and a taskbar that could handle such cases, as all programs were launched either from Program Manager or File Manager as the KB article refers to but if you didn't watch out, not using shift made the program take focus and take up the screen, and I believe that shift to minimized was a way to keep it out of site till you wanted to use.
Attachment #498293 - Flags: review?(dtownsend)
Attachment #498293 - Flags: review+
Attachment #498293 - Flags: approval2.0+
blocking2.0: ? → -
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite-
Flags: in-litmus?
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b9
Summary: Shift key for safe mode conflicts with Windows shortcut keys → Holding Shift should only trigger safe mode if other modifiers are not held (avoid conflicts with custom shortcuts)
Flags: in-litmus?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: