Bug 619866 - Shift key for safe mode conflicts with Windows shortcut keys. r=dtownsend, a=approval2.0